--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,14 @@ buildscript
 {
     repositories
     {
+        google()
         mavenCentral()
     }
+    dependencies {
+        classpath 'com.google.gms:google-services:4.3.10'
+    }
 }
+
 plugins {
     id 'com.android.application' version '7.1.1' apply false
     id 'com.android.library' version '7.1.1' apply false
